corrected photo ratio

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1212,10 +1212,13 @@ input[type="radio"] + label:before {
 
 /* Image */
 .image {
-  border-radius: 0.375em;
-  border: 0;
-  display: inline-block;
-  position: relative; }
+  /*border-radius: 0.375em;*/
+  /*border: 0;*/
+  /*display: inline-block;*/
+  /*position: relative;*/ 
+  max-width: 100%;
+  height: auto;
+  overflow: hidden;}
   .image img {
     border-radius: 0.375em;
     display: block; }
